<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.postech</groupId>
    <artifactId>challenge-01</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>challenge-01</name>
    <description>
        Projeto desenvolvido para a fase 01 do desafio da PosTech de Arquitetura e Desenvolvimento em Java
    </description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>21</java.version>
		<junit.version>5.11.4</junit.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.5</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.36</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.8.6</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.36</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!-- Plugin do Jacoco -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.11</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <!--                    <execution>-->
                    <!--                        <id>check</id>-->
                    <!--                        <goals>-->
                    <!--                            <goal>check</goal>-->
                    <!--                        </goals>-->
                    <!--                        <configuration>-->
                    <!--                            <rules>-->
                    <!--                                <rule>-->
                    <!--                                    <element>BUNDLE</element>-->
                    <!--                                    <limits>-->
                    <!--                                        <limit>-->
                    <!--                                            <counter>LINE</counter>-->
                    <!--                                            <value>COVEREDRATIO</value>-->
                    <!--                                            <minimum>0.80</minimum>-->
                    <!--                                        </limit>-->
                    <!--                                    </limits>-->
                    <!--                                </rule>-->
                    <!--                            </rules>-->
                    <!--                            <excludes>-->
                    <!--                                <exclude>com/postech/challenge_01/Challenge01Application.class</exclude>-->
                    <!--                                <exclude>com/postech/challenge_01/dtos/**</exclude>-->
                    <!--                                <exclude>com/postech/challenge_01/exceptions/**</exclude>-->
                    <!--                                <exclude>com/postech/challenge_01/config/**</exclude>-->
                    <!--                                <exclude>com/postech/challenge_01/mappers/**</exclude>-->
                    <!--                            </excludes>-->
                    <!--                        </configuration>-->
                    <!--                    </execution>-->
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>com/postech/challenge_01/Challenge01Application.class</exclude>
                                <exclude>com/postech/challenge_01/dtos/**</exclude>
                                <exclude>com/postech/challenge_01/exceptions/**</exclude>
                                <exclude>com/postech/challenge_01/config/**</exclude>
                                <exclude>com/postech/challenge_01/mappers/**</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
